clmpkg/objects/Apttus__APTS_Agreement__c.object
<CustomObject>
    <fields>
        <fullName>MailingState__c</fullName>
        <inlineHelpText>If state does not apply, put &quot;N/A&quot;.</inlineHelpText>
        <label>Mailing State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MailingStreet__c</fullName>
        <label>Mailing Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MinStreamingHours__c</fullName>
        <description>Field is used by Content Acquisition Team and is associated to the Sponsorship Fee Payments process.</description>
        <inlineHelpText>If this varies by team member, please put info in Other Custom Terms/Requirements box</inlineHelpText>
        <label>Min Streaming (Hours)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MinimumGuaranteeAmount__c</fullName>
        <description>Field is associated to the Minimum Guarantee Payments process.</description>
        <inlineHelpText>Please enter a currency amount.</inlineHelpText>
        <label>Minimum Guarantee (MG $)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MinimumGuaranteePayment__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Field is associated to the Minimum Guarantee Payment process.</description>
        <inlineHelpText>If the field is &apos;checked&apos;, it means &apos;yes&apos;, there is a minimum guarantee payment.</inlineHelpText>
        <label>Minimum Guarantee Payment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NetRevenueCumulative__c</fullName>
        <label>Net Revenue (Cumulative)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>NetSuite_Vendor_ID__c</fullName>
        <label>NetSuite Vendor ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Agreement_or_Renewal__c</fullName>
        <label>New Agreement or Renewal</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New Agreement</fullName>
                </value>
                <value>
                    <fullName>Renewal</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>No_of_Agreement_Sponsorships__c</fullName>
        <label>No of Agreement Sponsorships</label>
        <summaryForeignKey>AgreementSponsorship__c.Agreement__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Num_of_Channels__c</fullName>
        <label>Num of Channels</label>
        <summaryForeignKey>AgreementChannel__c.Agreement__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>OneTimeBonusPayment__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Field is associated to the One-Time Bonus Payment process.</description>
        <label>One-Time Bonus Payment ($)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>One_Time_Fees__c</fullName>
        <label>One Time Fees</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>OtherCustomTermsRequirements__c</fullName>
        <inlineHelpText>Any other custom terms, requirements for sponsorship money / MG / license fees.</inlineHelpText>
        <label>Other Custom Terms / Requirements</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>OtherPartySignedBy__c</fullName>
        <description>Field is used in the DocuSign process.</description>
        <label>Other Party Signed By</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OwnerFullName__c</fullName>
        <formula>IF(
AND(ISBLANK(Owner:User.FirstName),ISBLANK(Owner:User.LastName)),
Owner:Queue.QueueName,
Owner:User.FirstName + &apos; &apos; + Owner:User.LastName
)</formula>
        <label>Owner Full Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PartnerTier__c</fullName>
        <label>Partner Tier</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ProRatedIncentive__c</fullName>
        <description>Field is associated to the Incentives process.</description>
        <label>Pro-Rated Incentive</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RequestSubmissionDate__c</fullName>
        <label>Legal Request Submission Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ReturnToRequestor__c</fullName>
        <description>Return the agreement to the requestor.</description>
        <formula>IF(
AND(
ISPICKVAL(Apttus__Status_Category__c,&quot;Request&quot;),
OR(
ISPICKVAL(Apttus__Status__c,&quot;Submitted Request&quot;),
AND(ISPICKVAL(Apttus__Status__c,&quot;Approved Request&quot;),ISPICKVAL(Apttus_Approval__Approval_Status__c,&quot;Approved&quot;),Apttus__Requestor__r.Id &lt;&gt; Owner:User.Id)
)
),
HYPERLINK(&quot;/apex/Apttus__AgreementReturnToRequestor?id=&quot; &amp;Id, IMAGE(&quot;/resource/Apttus__Button_ReturnToRequestor&quot;, &quot;Return To Requestor&quot;),&quot;_self&quot;), NULL)</formula>
        <inlineHelpText>A Legal user clicks this button when the information the requestor has provided is insufficient.</inlineHelpText>
        <label>Return To Requestor</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Running_User_is_Legal__c</fullName>
        <description>Used to show/hide &apos;Send for Approval&apos; button on the Agreement.</description>
        <formula>$User.ProfileId=&quot;00e41000000P34i&quot;</formula>
        <label>Running User is Legal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Send_For_Review__c</fullName>
        <formula>IF(
AND(
OR($Profile.Name = &quot;Legal&quot;,$Profile.Name = &quot;System Administrator&quot;), 
OR(ISPICKVAL(Apttus__Status_Category__c,&quot;In Signatures&quot;),ISPICKVAL(Apttus__Status_Category__c,&quot;In Authoring&quot;))
),
HYPERLINK(&quot;/apex/Apttus__SendEmail?id=&quot;&amp;Id &amp; &quot;&amp;action=Send_To_Other_Party_For_Review&quot;, IMAGE(&quot;/resource/Apttus__Button_SendForReview&quot;, &quot;Send For Review&quot;), &quot;_self&quot;), NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>It is strongly recommended that Twitch Legal not click this button; rather, Twitch Legal should leverage the &quot;Send For Review&quot; button in the X-Author Contracts add-in found in either their MS Word or their MS Outlook application.</inlineHelpText>
        <label>Send For Review</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Send_For_Review_legal__c</fullName>
        <description>Updated button for Legal Profile</description>
        <formula>IF(
AND( 
    OR($Profile.Name = &quot;Legal&quot;,$Profile.Name = &quot;System Administrator&quot;), 
    OR(ISPICKVAL(Apttus__Status_Category__c,&quot;In Signatures&quot;),ISPICKVAL(Apttus__Status_Category__c,&quot;In Authoring&quot;))
   ),
HYPERLINK(&quot;/apex/Apttus__SendEmail?id=&quot;&amp;Id &amp; &quot;&amp;action=Send_To_Other_Party_For_Review&quot;, IMAGE(&quot;/resource/Apttus__Button_SendForReview&quot;, &quot;Send For Review&quot;), &quot;_self&quot;), NULL)</formula>
        <label>Send For Review</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SignatoryName__c</fullName>
        <description>Field is used in the DocuSign auto-add set-up. Do not show this field in the page layout.</description>
        <label>Signatory Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Signatory_Email__c</fullName>
        <label>Signatory Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Signatory__c</fullName>
        <inlineHelpText>Please enter the email address of the team/user signatory.</inlineHelpText>
        <label>Signatory</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status_Category_Formula__c</fullName>
        <description>Field is used in the Kanban board.  Do not delete this field.</description>
        <formula>TEXT(Apttus__Status_Category__c)</formula>
        <label>Status Category Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SubmitRequest__c</fullName>
        <formula>IF(
AND(
ISPICKVAL(Apttus__Status_Category__c,&quot;Request&quot;),
OR(
ISPICKVAL(Apttus__Status__c,&quot;Request&quot;),
ISPICKVAL(Apttus__Status__c,&quot;In Amendment&quot;),
ISPICKVAL(Apttus__Status__c,&quot;In Renewal&quot;),
ISPICKVAL(Apttus__Status__c,&quot;&quot;),
ISPICKVAL(Apttus__Status__c,&quot;Returned to Requestor&quot;),
ISPICKVAL(Apttus__Status__c,&quot;Approved Request&quot;)
),
ISPICKVAL(Apttus_Approval__Approval_Status__c,&quot;Approved&quot;),
Apttus__Requestor__r.Id = Owner:User.Id 
),
HYPERLINK(&quot;/apex/Apttus__AgreementSubmitRequest?id=&quot; &amp;Id, IMAGE(&quot;/resource/Apttus__Button_SubmitRequest&quot;, &quot;Submit Request&quot;), &quot;_self&quot;), NULL)</formula>
        <inlineHelpText>A requestor clicks this button when s/he is ready to hand-off the Agreement record to Legal for their review and document generation.</inlineHelpText>
        <label>Submit Request</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SubscriptionRevenueTerms__c</fullName>
        <description>Field is used to store terms which vary across multiple agreements:
- Standard (50/50)
- Premium (70/30)</description>
        <label>Subscription Revenue Terms</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Standard (50/50)</fullName>
                    <default>true</default>
                    <label>Standard (50/50)</label>
                </value>
                <value>
                    <fullName>Premium (70/30)</fullName>
                </value>
                <value>
                    <fullName>Custom</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Subscription_Revenue_Cumulative__c</fullName>
        <label>Subscription Revenue (Cumulative)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Tech_Costs__c</fullName>
        <label>Tech Costs</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Tilpati_Payee_ID__c</fullName>
        <label>Tilpati Payee ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TotalBudgetedHWCumulative__c</fullName>
        <label>Total Budgeted HW (Cumulative)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TotalContentCostkMW__c</fullName>
        <label>Total Content Cost / kMW</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TotalEstimatedCost__c</fullName>
        <description>Total Estimated Cost is calculated as the total (a) minimum guaranteed amount, (b) upfront license fees, (c) sponsorship fees and (d) other committed funds that would be payable by Twitch to the partner (&quot;Committed Spend&quot;)</description>
        <label>Total Estimated Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TotalPartnerPayoutCumulative__c</fullName>
        <label>Total Partner Payout (Cumulative)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Sponsorship_Count__c</fullName>
        <label>Total Sponsorship Count</label>
        <summaryForeignKey>AgreementSponsorship__c.Agreement__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>TwitchSignatoryName__c</fullName>
        <description>Field is used in the DocuSign auto-add set-up.  Do not show this field in the page layout.</description>
        <label>Twitch Signatory Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TwitchSignedBy__c</fullName>
        <description>Field is used in the DocuSign process.</description>
        <label>Twitch Signed By</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Twitch_Signatory__c</fullName>
        <inlineHelpText>Please enter the email address of the Twitch signatory.</inlineHelpText>
        <label>Twitch Signatory</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Twitch_Signed_Title__c</fullName>
        <label>Twitch Signed Title</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VODExclusivity__c</fullName>
        <description>Field is used in calculations to support the deal/partner model process.</description>
        <label>VOD Exclusivity</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>12 Hours</fullName>
                </value>
                <value>
                    <fullName>24 Hours</fullName>
                </value>
                <value>
                    <fullName>7 Days</fullName>
                </value>
                <value>
                    <fullName>Custom</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>X2018TotalContentCost__c</fullName>
        <label>2018 Total Content Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2019TotalContentCost__c</fullName>
        <label>2019 Total Content Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>of_HW_in_top_5_Countries__c</fullName>
        <inlineHelpText>US/CA/GB/DE/FR</inlineHelpText>
        <label>% of HW in top 5 Countries</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <label>Agreement</label>
    <listViews>
        <fullName>Apttus__All</fullName>
        <columns>NAME</columns>
        <columns>Apttus__FF_Agreement_Number__c</columns>
        <columns>Apttus__Account__c</columns>
        <columns>Apttus_Approval__Approval_Status__c</columns>
        <columns>Apttus__Status_Category__c</columns>
        <columns>Apttus__Status__c</columns>
        <columns>Apttus__Contract_Start_Date__c</columns>
        <columns>Apttus__Contract_End_Date__c</columns>
        <columns>TotalEstimatedCost__c</columns>
        <columns>OwnerFullName__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Twitch_Legal_Queue_APTS_Agreement</fullName>
        <columns>NAME</columns>
        <columns>Apttus__FF_Agreement_Number__c</columns>
        <columns>Apttus__Account__c</columns>
        <columns>Apttus_Approval__Approval_Status__c</columns>
        <columns>Apttus__Status_Category__c</columns>
        <columns>Apttus__Status__c</columns>
        <columns>Apttus__Contract_Start_Date__c</columns>
        <columns>Apttus__Contract_End_Date__c</columns>
        <columns>TotalEstimatedCost__c</columns>
        <columns>OwnerFullName__c</columns>
        <filterScope>Queue</filterScope>
        <label>Twitch Legal Queue</label>
        <language>en_US</language>
        <queue>Twitch_Legal_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Agreement Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Agreements</pluralLabel>
    <recordTypes>
        <fullName>Twitch_Content_License</fullName>
        <active>true</active>
        <label>Twitch - Content License</label>
    </recordTypes>
    <sharingModel>Read</sharingModel>
    <validationRules>
        <fullName>AdDensityRequirement</fullName>
        <active>true</active>
        <description>Validates that the Ad Density Requirements (# Min / Hr) field has a number between 0 and 60.</description>
        <errorConditionFormula>OR(AdDensityRequirementMinHr__c &gt; 60,AdDensityRequirementMinHr__c &lt; 0)</errorConditionFormula>
        <errorDisplayField>AdDensityRequirementMinHr__c</errorDisplayField>
        <errorMessage>Please enter a number between 0 and 60.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>AgreementNameRenewAmendTerminate</fullName>
        <active>true</active>
        <description>The Agreement Name field value cannot be modified during the amend, renew, expire, and terminate process.</description>
        <errorConditionFormula>AND(
ISCHANGED(Name),
OR(
ISPICKVAL(Apttus__Status__c, &quot;In Amendment&quot;),
ISPICKVAL(Apttus__Status__c, &quot;In Renewal&quot;),
ISPICKVAL(Apttus__Status_Category__c, &quot;Amended&quot;),
ISPICKVAL(Apttus__Status_Category__c, &quot;Renewed&quot;),
ISPICKVAL(Apttus__Status_Category__c, &quot;Terminated&quot;)
)
)</errorConditionFormula>
        <errorDisplayField>Name</errorDisplayField>
        <errorMessage>The Agreement Name cannot be changed.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Apttus__End_Date_Check</fullName>
        <active>true</active>
        <description>Check that either perpetual is checked or end date is filled in when agreement goes into effect</description>
        <errorConditionFormula>AND(
ISPICKVAL(Apttus__Status_Category__c,&quot;In Effect&quot;),
AND(ISNULL(Apttus__Contract_End_Date__c),NOT(Apttus__Perpetual__c)),
OR(ISNULL(Apttus__Term_Months__c),Apttus__Term_Months__c&lt;=0)
)</errorConditionFormula>
        <errorDisplayField>Apttus__Contract_End_Date__c</errorDisplayField>
        <errorMessage>Please enter the Agreement End Date or mark the Agreement as Perpetual prior to executing the agreement.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Apttus__Term_Validation</fullName>
        <active>true</active>
        <description>Validate that Term is entered correctly</description>
        <errorConditionFormula>AND( ( Apttus__Perpetual__c ),  (  Apttus__Term_Months__c  ) &gt; 0 )</errorConditionFormula>
        <errorDisplayField>Apttus__Term_Months__c</errorDisplayField>
        <errorMessage>Cannot enter both Perpetual and Term.  Please enter only one of the values</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Apttus__Term_Validation_2</fullName>
        <active>true</active>
        <description>Validate that Term is entered correctly</description>
        <errorConditionFormula>AND( (Apttus__Perpetual__c ),  NOT(ISNULL(  Apttus__Contract_End_Date__c )) )</errorConditionFormula>
        <errorDisplayField>Apttus__Contract_End_Date__c</errorDisplayField>
        <errorMessage>Cannot enter both Perpetual and End Date.  Please enter only one of the values</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Apttus__Term_Validation_3</fullName>
        <active>false</active>
        <description>Validate that Term is entered correctly (DEPRECATED)</description>
        <errorConditionFormula>AND( (  Apttus__Term_Months__c ) &gt; 0,  NOT(ISNULL(  Apttus__Contract_End_Date__c )) )</errorConditionFormula>
        <errorDisplayField>Apttus__Contract_End_Date__c</errorDisplayField>
        <errorMessage>Cannot enter both Term and End Date.  Please enter only one of the values</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CannotUpdateActiveAgreement</fullName>
        <active>true</active>
        <description>Validates a user is unable to make changes to an Agreement record when it is fully-executed.</description>
        <errorConditionFormula>AND(
!$Permission.CanEditActiveAgreement,
RecordType.Name = &apos;Twitch - Content License&apos;,
OR(
ISPICKVAL(PRIORVALUE(Apttus__Status__c), &apos;Activated&apos;),
ISPICKVAL(PRIORVALUE(Apttus__Status_Category__c), &apos;Amended&apos;),
ISPICKVAL(PRIORVALUE(Apttus__Status_Category__c), &apos;Renewed&apos;),
ISPICKVAL(PRIORVALUE(Apttus__Status_Category__c), &apos;Terminated&apos;)
),
NOT(ISCHANGED(Apttus__Status__c)),
NOT(ISNEW())
)</errorConditionFormula>
        <errorMessage>The Agreement record has been fully-executed and no changes are allowed.  If a change needs to be made, then please reach out to the Twitch Legal Team to &apos;amend&apos; this Agreement record.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CannotUpdateActiveAgreementTEST</fullName>
        <active>true</active>
        <description>Validates a user is unable to make changes to an Agreement record when it is fully-executed.</description>
        <errorConditionFormula>AND(
!$Permission.CanEditActiveAgreement,
RecordType.Name = &apos;Twitch - Content License&apos;,
OR(
ISPICKVAL(PRIORVALUE(Apttus__Status__c), &apos;Activated&apos;),
ISPICKVAL(PRIORVALUE(Apttus__Status__c), &apos;Being Amended&apos;),
ISPICKVAL(PRIORVALUE(Apttus__Status__c), &apos;Being Renewed&apos;),
ISPICKVAL(PRIORVALUE(Apttus__Status__c), &apos;Superseded&apos;)
),
NOT(ISCHANGED(Apttus__Status__c)),
NOT(ISNEW())
)</errorConditionFormula>
        <errorMessage>The Agreement record has been fully-executed and no changes are allowed.  If a change needs to be made, then please reach out to the Twitch Legal Team to &apos;amend&apos; this Agreement record.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CannotUpdatePendingApprovalAgreement</fullName>
        <active>true</active>
        <description>Validates a user is unable to make changes to an Agreement record when it is pending approval from Twitch management users.</description>
        <errorConditionFormula>AND(
!$Permission.CanEditPendingApprovalAgreement,
RecordType.Name = &apos;Twitch - Content License&apos;,
ISPICKVAL(PRIORVALUE(Apttus_Approval__Approval_Status__c), &apos;Pending Approval&apos;),
NOT(ISCHANGED(Apttus_Approval__Approval_Status__c))
)</errorConditionFormula>
        <errorMessage>The Agreement record is &apos;locked&apos; due to pending management approval of the financial terms. When the approval process is complete, then this Agreement record will become editable again.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CustomAdvertisingRevenueTerms</fullName>
        <active>true</active>
        <description>Validates that the Custom Advertising Revenue Terms field always has a value, if the Advertising Revenue Terms field value equals &quot;Custom&quot;.</description>
        <errorConditionFormula>AND(
ISPICKVAL(AdvertisingRevenueTerms__c,&quot;Custom&quot;),
ISBLANK(CustomAdvertisingRevenueTerms__c)
)</errorConditionFormula>
        <errorDisplayField>CustomAdvertisingRevenueTerms__c</errorDisplayField>
        <errorMessage>Since Advertising Revenue Terms is &apos;Custom&apos;, please enter text into the Custom Advertising Revenue Terms field.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CustomLiveExclusivity</fullName>
        <active>true</active>
        <description>Validates that the Custom Live Exclusivity field always has a value, if the Live Exclusivity field value equals &quot;Custom&quot;.</description>
        <errorConditionFormula>AND(
ISPICKVAL(LiveExclusivity__c,&quot;Custom&quot;),
ISBLANK(CustomLiveExclusivity__c)
)</errorConditionFormula>
        <errorDisplayField>CustomLiveExclusivity__c</errorDisplayField>
        <errorMessage>Since Live Exclusivity is &apos;Custom&apos;, please enter text into the Custom Live Exclusivity field.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CustomSubscriptionRevenueTerms</fullName>
        <active>true</active>
        <description>Validates that the Custom Subscription Revenue Terms field always has a value, if the Subscription Revenue Terms field value equals &quot;Custom&quot;.</description>
        <errorConditionFormula>AND(
ISPICKVAL(SubscriptionRevenueTerms__c,&quot;Custom&quot;),
ISBLANK(CustomSubscriptionRevenueTerms__c)
)</errorConditionFormula>
        <errorDisplayField>CustomSubscriptionRevenueTerms__c</errorDisplayField>
        <errorMessage>Since Subscription Revenue Terms is &apos;Custom&apos;, please enter text into the Custom Subscription Revenue Terms field.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CustomVODExclusivity</fullName>
        <active>true</active>
        <description>Validates that the Custom VOD Exclusivity field always has a value, if the VOD Exclusivity field value equals &quot;Custom&quot;.</description>
        <errorConditionFormula>AND(
ISPICKVAL(VODExclusivity__c,&quot;Custom&quot;),
ISBLANK(CustomVODExclusivity__c)
)</errorConditionFormula>
        <errorDisplayField>CustomVODExclusivity__c</errorDisplayField>
        <errorMessage>Since VOD Exclusivity is &apos;Custom&apos;, please enter text into the Custom VOD Exclusivity field.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>FullyExecutedNotApproved</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
NOT(ISPICKVAL(Apttus_Approval__Approval_Status__c,&quot;Approved&quot;)),
ISPICKVAL(Apttus__Status_Category__c,&apos;In Effect&apos;),
ISPICKVAL(Apttus__Status__c,&apos;Activated&apos;)
)</errorConditionFormula>
        <errorDisplayField>Apttus_Approval__Approval_Status__c</errorDisplayField>
        <errorMessage>The Agreement record cannot be fully-executed until it is &apos;approved&apos;.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>TotalEstimatedCostMustBePositive</fullName>
        <active>true</active>
        <errorConditionFormula>TotalEstimatedCost__c &lt; 0</errorConditionFormula>
        <errorDisplayField>TotalEstimatedCost__c</errorDisplayField>
        <errorMessage>The Total Estimated Cost cannot be a negative value. Please enter a value greater than or equal to 0.</errorMessage>
    </validationRules>
</CustomObject>